Fix delete variables and adjust dark mode file upload dialog colors

--- a/frontend/src/assets/mat-webui.scss
+++ b/frontend/src/assets/mat-webui.scss
@@ -227,3 +227,4 @@ body.wgc { background-color: #f5f5f5; }
 .dm .dmLogo { filter: invert(1) grayscale(1); }
 .dm .dmLink, .dm .dmLink:visited, .dm .dmLink:active  { color: white; }
 .dm .dmLink:hover  { color: rgb(218, 218, 218); }
+.dm .uplProgress { color: black; }
